test_input.txt
CompileC /path/to/build/main.o main.swift normal x86_64 swift com.apple.xcode.tools.swift.compiler
    cd /path/to/project
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name MyApp -target x86_64-apple-macos10.15 -sdk /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk -L /path/to/build -I /path/to/build -c main.swift -o /path/to/build/main.o

main.swift:15:5: error: use of undeclared identifier 'unknown'
    unknown = 5
    ^~~~~~~

ViewController.swift:23:9: warning: variable 'temp' was never used; consider removing it
    let temp = "test"
        ^~~~

AppDelegate.swift:45:12: error: cannot find 'invalidFunction' in scope
    let result = invalidFunction()
                 ^~~~~~~~~~~~~~~

Test Case 'UserManagerTests.testLoginValidation' failed (0.045 seconds).
    XCTAssertEqual failed: ("invalid") is not equal to ("valid")

Test Case 'NetworkTests.testAPIConnection' failed (0.023 seconds).
    XCTAssertTrue failed - Connection should be established

** BUILD FAILED **

Build failed after 3.2 seconds